# polyterm

./: Cargo.toml  README.md  idea  workspace
demo/: workspace
src/: lib.rs  main.rs  testkit.rs
tests/: screenshots.rs
