[package]
name = "termem-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
alacritty_terminal = "0.26.0"
arboard = "3.6.1"
fontdue = "0.9"
image = { version = "0.25", default-features = false, features = ["png"] }
softbuffer = "0.4"
winit = "0.30"

# Linux-only: mark the window opaque + black-backed before it maps, so the
# compositor never shows a see-through (desktop-behind) frame on open. Versions
# match what winit/softbuffer already pull in transitively.
[target.'cfg(target_os = "linux")'.dependencies]
raw-window-handle = "0.6"
x11rb = "0.13"
